--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome Proximus</h1>
-    <p>This is a test of automated deployment of a .NET 6.0 application to Ubuntu 22</p>
+    <p>This is a test of automated deployment of a .NET 6.0 application to Ubuntu 24</p>
+    <p>In October 2025</p>
 </div>
